--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
       - main
       - dev
 env: 
-  MONGODB_DB_NAME: "testdb"
+  MONGODB_DB_NAME: "gha-demo"
 jobs:
   test:
     environment: testing
